--- a/CarWashFrontend/Views/Login/AdminPage.cshtml
+++ b/CarWashFrontend/Views/Login/AdminPage.cshtml
@@ -4,6 +4,19 @@
 }
 
 <h2>AdminPage</h2>
+<style>
+    body {
+        background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRdZEEU2b0ThGWdYuWu4DSLU24sQDmqxt7JKg&usqp=CAU');
+        background-position: inherit;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    a {
+        color: Black;
+    }
+</style>
+
+
 @Html.ActionLink("UserManagement", "Index", "User")||
 
 @Html.ActionLink("PackageManagement", "PackageDetails", "Package")||
