--- a/CarWashFrontend/Views/Car/CreateCar.cshtml
+++ b/CarWashFrontend/Views/Car/CreateCar.cshtml
@@ -1,10 +1,10 @@
-﻿@model CarWashFrontend.Models.PackageViewModel
+﻿@model CarWashFrontend.Models.CarViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "CreateCar";
 }
 
-<h2>Create</h2>
+<h2>CreateCar</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -13,31 +13,20 @@
 <div class="form-horizontal">
 
     <hr />
-
-
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.CarModel, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.CarModel, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.CarModel, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.CarModel, "", new { @class = "text-danger" })
         </div>
     </div>
 
